--- a/style.css
+++ b/style.css
@@ -42,8 +42,9 @@ h1{
 }
 
 #score {
-    font-size: 20px;
-    color: black;
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
     margin-top: 20px;
 }
 
